# OtusArh_1

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
Lib/: CMakeLists.txt
Lib/include/: lib.h
Lib/src/: lib.cpp
Main/: CMakeLists.txt
Main/src/: main.cpp
Test/: CMakeLists.txt
Test/src/: test.cpp
